--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,24 +5,16 @@ output:
   sort-results: true
 linters-settings:
   depguard:
-    list-type: blacklist
-    include-go-root: true
-    packages:
-      - log
-      - github.com/satori/go.uuid
+    rules:
+      main:
+        deny:
+          - pkg: log
+            desc: Use jot instead
+          - pkg: github.com/satori/go.uuid
+            desc: Use github.com/google/uuid or github.com/gofrs/uuid instead
   errcheck:
     check-type-assertions: true
     check-blank: true
-  gocritic:
-    enabled-tags:
-      - diagnostic
-      - performance
-      - style
-      - opinionated
-      - experimental
-    disabled-checks:
-      - octalLiteral
-      - sloppyReassign
   gofumpt:
     extra-rules: true
   govet:
@@ -44,40 +36,35 @@ linters-settings:
   misspell:
     locale: US
   staticcheck:
-    go: "1.18"
+    go: "1.20"
     checks: [ "all", "-SA3000" ]
   unused:
     check-exported: false
 linters:
   disable-all: true
   enable:
-    - deadcode
     - depguard
     - errcheck
     - errorlint
     - exportloopref
     - goconst
-#    - gocritic
     - gofumpt
     - goimports
-#    - gosimple
+    - gosimple
     - govet
-    - ifshort
     - ineffassign
     - misspell
-#    - noctx
+    - noctx
     - prealloc
     - predeclared
     - revive
-#    - staticcheck
-#    - structcheck
+    - staticcheck
+    - typecheck
     - unconvert
-#    - unused
-    - varcheck
-#    - wastedassign
-# Once Go 1.18 support is finalized in golangci-lint, re-enable the above linters
+    - unused
 issues:
   max-same-issues: 10
   exclude-use-default: false
   exclude:
     - "fieldalignment: struct with \\d+ pointer bytes could be"
+    - "package-comments: should have a package comment"
